threads: adds APIs for snapshotting all threads
