# core/api_snapshots.go
@@ -8,6 +8,24 @@ import (
 	"github.com/textileio/go-textile/pb"
 )
 
+// createThreadSnapshots godoc
+// @Summary Create thread snapshots
+// @Description Snapshots all threads and pushes to registered cafes
+// @Tags threads
+// @Produce application/json
+// @Success 201 {string} string "ok"
+// @Failure 400 {string} string "Bad Request"
+// @Failure 500 {string} string "Internal Server Error"
+// @Router /snapshots [post]
+func (a *api) createThreadSnapshots(g *gin.Context) {
+	if err := a.node.SnapshotThreads(); err != nil {
+		g.String(http.StatusBadRequest, err.Error())
+		return
+	}
+
+	g.String(http.StatusCreated, "ok")
+}
+
 // searchThreadSnapshots godoc
 // @Summary Search for thread snapshots
 // @Description Searches the network for thread snapshots
@@ -17,7 +35,7 @@ import (
 // @Success 200 {object} pb.QueryResult "results stream"
 // @Failure 400 {string} string "Bad Request"
 // @Failure 500 {string} string "Internal Server Error"
-// @Router /snapshots [post]
+// @Router /snapshots/search [post]
 func (a *api) searchThreadSnapshots(g *gin.Context) {
 	opts, err := a.readOpts(g)
 	if err != nil {
